--- a/jorobo.ini
+++ b/jorobo.ini
@@ -1,5 +1,5 @@
 extension = agosmmapwithmarker
-version = 0.0.1
+version = 0.0.2
 source = src
 target = package
 
@@ -25,7 +25,7 @@ exclude =
 text = "
 /**
  * @package     Joomla.Plugin
- * @subpackage  Agosmmapwithmarker
+ * @subpackage  plg_fields_agosmmapwithmarker
  *
  * @copyright   Copyright (C) 2005 - ##YEAR## Astrid Günther, Inc. All rights reserved.
  * @license     GNU General Public License version 2 or later;
